8253588: C1: assert(false) failed: unknown register compiler on x86_32 only with -XX:+TraceLinearScanLevel=4